# greenfield

./: .gitignore  Cargo.toml  Readme.md
benches/: greenfield_benches.rs
src/: core.rs  error.rs  io.rs  lib.rs  prelude.rs
src/core/: color.rs  image.rs  pixel.rs  quantization.rs
src/core/color/: tests.rs
src/core/image/: tests.rs
src/core/pixel/: tests.rs
src/core/quantization/: tests.rs
src/io/: tests.rs
